--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,16 +1,15 @@
-name: Bug report
-about: Report a reproducible bug.
+name: Bug Report
+description: Report a reproducible bug.
 title: '[Bug]: '
-
 body: 
 - type: markdown
-  attributes: |
+  value: |
     Thanks for taking the time to fill out this bug report!
 - type: input
   id: contact
   attributes:
     label: Contact Details
-    description: How can we get in touch with you if we need more info?
+    description: What is the best way to contact you if we need more info?
     placeholder: ex. On discord at Username#42069
   validations:
     required: false
@@ -31,11 +30,11 @@ body:
   validations:
     required: true
 - type: textarea
-attributes:
-  label: Anything else?
-  description: |
-    Links? References? Anything that will give us more context about the issue you are encountering!
+  attributes:
+    label: Anything else?
+    description: |
+      Links? References? Anything that will give us more context about the issue you are encountering!
 
-    Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
-validations:
-  required: false
+      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+  validations:
+    required: false
