--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "./build/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode development"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Spacetime-Meta/spacetime-standard-kit.git"
   },
   "files": [
-    "build/bundle.js",
+    "build/bundle.min.js",
     "LICENSE",
     "package.json",
     "README.md"
