--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./build/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -22,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/Spacetime-Meta/spacetime-standard-kit/issues"
   },
-  "homepage": "https://github.com/Spacetime-Meta/spacetime-standard-kit#readme",
+  "homepage": "https://spacetimemeta.io",
   "devDependencies": {
     "webpack": "^4.46.0",
     "webpack-cli": "^4.10.0"
