--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,7 +5,7 @@ body:
 - type: markdown
   attributes:
     value: |
-      Thanks for taking the time to fill out this feature request!  
+      Thank you for taking the time to fill out this feature request! 
       Ignoring this template may result in your feature request getting deleted.
 - type: textarea
   id: overview
