working on mobile controls

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "nipplejs": "^0.9.1",
     "peerjs": "^1.4.6",
     "seedrandom": "^3.0.5",
     "three": "^0.142.0"
