--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm cardano && npm run build && npm run dependencies && npm run server",
-    "cardano": "cd src/cardano && npm install & cd ../..",
-    "dependencies": "cd server && npm install & cd ..",
-    "server": "node server/server.js",
-    "build": "webpack --mode production",
+    "build": "npm cardano_dep && webpack --mode production",
+    "start": "npm run server_dep && node server/server.js",
+    "cardano_dep": "cd src/cardano && npm install & cd ../..",
+    "server_dep": "cd server && npm install & cd ..",
     
     "local": "webpack serve --config ./webpack.config.js --mode development"
   },
