--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm cardano_dep && webpack --mode production",
+    "build": "npm run cardano_dep && webpack --mode production",
     "start": "npm run server_dep && node server/server.js",
     "cardano_dep": "cd src/cardano && npm install & cd ../..",
     "server_dep": "cd server && npm install & cd ..",
