--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    
     "build": "npm run server_dep && webpack --mode production",
     "server_dep": "cd server && npm install & cd ..",
-    
+    "sdk": "webpack --mode production",
     "start": "node server/server.js",
-
     "local": "webpack serve --config ./webpack.config.js --mode development"
   },
   "repository": {
