--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run server_dep && webpack --mode production",
     "server_dep": "cd server && npm install & cd ..",
     "sdk": "webpack --mode production",
-    "start": "node server/server.js",
+    "start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 server/server.js",
     "local": "webpack serve --config ./webpack.config.js --mode development"
   },
   "repository": {
